--- a/partials/login.html
+++ b/partials/login.html
@@ -1,16 +1,14 @@
-<span>Please login</span>
-<div>
-	<form ng-submit="login()">
-		<label>
-			<span>Email:</span>
-			<!-- todo: change type='email' and mark required -->
-			<input type='text' name='username'>
-		</label>
-		<label>
-			<span>Password:</span>
-			<!-- todo: mark required -->
-			<input type='password' name='password'>
-		</label>
-		<input type='submit'>
-	</form>
+<div class='login-container'>
+	<span>Please login</span>
+	<div class='login-form-container'>
+		<form ng-submit='login()'>
+			<label>
+				<input type='email' name='username' placeholder='Email' required>
+			</label>
+			<label>
+				<input type='password' name='password' placeholder='Password' required>
+			</label>
+			<input type='submit' value='Login!'>
+		</form>
+	</div>
 </div>
